--- a/src/renderer/app.html
+++ b/src/renderer/app.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>ERWT Boilerplate</title>
+    <title>Dockeep Filemanager</title>
   </head>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <body>
     <div id="app"></div>
   </body>
